# web-server-comparison

./: .gitignore  README.md
c-web/: Makefile  README.md  c-web  main.c
d-web/: .gitignore  README.md  dub.json  dub.selections.json
d-web/source/: app.d
go-web/: README.md  main.go
go-web-gin/: README.md  go.mod  main.go
ocamlweb/: README.md  dune-project
ocamlweb/lib/: dune
ocamlweb/test/: dune
rust-web/: Cargo.toml  README.md
rust-web-actix/: Cargo.toml  README.md
rust-web-actix/src/: lib.rs  main.rs
rust-web-axum/: Cargo.toml  README.md
rust-web-axum/src/: lib.rs  main.rs
rust-web/src/: lib.rs  main.rs
swift-web/: Dockerfile  Package.swift  README.md  docker-compose.yml
swift-web/Sources/App/: configure.swift  routes.swift
