[package]
name = "rust-web-actix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.1.0"
serde = { version = "1.0.139", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking"] }
serde_json = "1.0.82"

[lib]
name = "rustweb"
path = "src/lib.rs"

[[bin]]
name = "rust-web"
path = "src/main.rs"